Update A Skincare Recommender.ipynb

--- a/A Skincare Recommender.ipynb
+++ b/A Skincare Recommender.ipynb
@@ -3040,13 +3040,13 @@
     "        print(\"No products found for the specified skin type.\")\n",
     "        return\n",
     "    \n",
-    "    idx = data_by_type.index[0]  # Select the index of the first matching row\n",
+    "    idx = data_by_type.index[0]  \n",
     "    for i in ingred_matrix.iloc[idx][1:]:\n",
     "        binary_list.append(i)    \n",
     "    point1 = np.array(binary_list).reshape(1, -1)\n",
     "    point1 = [val for sublist in point1 for val in sublist]\n",
-    "    prod_type = data_by_type['product_name'].iloc[0]  # Use .iloc[0] to select the value\n",
-    "    brand_search = data_by_type['brand'].iloc[0]  # Use .iloc[0] to select the value\n",
+    "    prod_type = data_by_type['product_name'].iloc[0]  \n,
+    "    brand_search = data_by_type['brand'].iloc[0]  
     "    \n",
     "    for j in range(data_by_type.index[0], data_by_type.index[0] + len(data_by_type)):\n",
     "        binary_list2 = []\n",
