Update A Skincare Recommender.ipynb

--- a/A Skincare Recommender.ipynb
+++ b/A Skincare Recommender.ipynb
@@ -3045,7 +3045,7 @@
     "        binary_list.append(i)    \n",
     "    point1 = np.array(binary_list).reshape(1, -1)\n",
     "    point1 = [val for sublist in point1 for val in sublist]\n",
-    "    prod_type = data_by_type['product_name'].iloc[0]  \n,
+    "    prod_type = data_by_type['product_name'].iloc[0]  \n",
     "    brand_search = data_by_type['brand'].iloc[0]  
     "    \n",
     "    for j in range(data_by_type.index[0], data_by_type.index[0] + len(data_by_type)):\n",
