--- a/A Skincare Recommender.ipynb
+++ b/A Skincare Recommender.ipynb
@@ -3046,8 +3046,9 @@
     "    point1 = np.array(binary_list).reshape(1, -1)\n",
     "    point1 = [val for sublist in point1 for val in sublist]\n",
     "    prod_type = data_by_type['product_name'].iloc[0]  \n",
-    "    brand_search = data_by_type['brand'].iloc[0]  
+    "    brand_search = data_by_type['brand'].iloc[0]  \n",
     "    \n",
+    "   \n",
     "    for j in range(data_by_type.index[0], data_by_type.index[0] + len(data_by_type)):\n",
     "        binary_list2 = []\n",
     "        for k in ingred_matrix.iloc[j][1:]:\n",
@@ -3282,7 +3283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract skin types from the original dataset\n",
+    "##Extract skin types from the original dataset\n",
     "skin_types_original = skin_products['Skin Type'].unique()"
    ]
   },
@@ -3293,7 +3294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a DataFrame with skin types and their numerical values\n",
+    "##skin types and their numerical values\n",
     "skin_types_numerical = pd.DataFrame({\n",
     "    'Skin Type': skin_types_original,\n",
     "    'Numerical Value': range(len(skin_types_original))\n",
@@ -3320,7 +3321,6 @@
     }
    ],
    "source": [
-    "# Display the table\n",
     "print(skin_types_numerical)"
    ]
   },
